<resources>
    <string name="app_name">ResultadoDoCertame</string>
    <string name="menu">Menu</string>
    <string name="vazio" />
    <string name="nome_da_turma">Nome da Turma</string>
    <string name="criar_turma">Criar Turma</string>
    <string name="separe_os_alunos_com">Separe os alunos com quebra de linha</string>
    <string name="adicionar_alunos">Adicionar Alunos</string>
    <string name="infelizmente_a_classe_n_o_foi_criada">Infelizmente a classe não foi criada.</string>
    <string name="classe_criada_com_sucesso">Classe criada com sucesso</string>
    <string name="insira_o_nome_da_turma">Insira o nome da turma.</string>
    <string name="quantidade_de_quest_es">Quantidade de Questões</string>
    <string name="quantidade_de_alternativas">Quantidade de Alternativas</string>
    <string name="provas_com_nomes_individuais">Provas com nomes individuais?</string>
    <string name="nome_da_turma_">Nome da Turma</string>
    <string name="insira_as_alternativas_corretas_em_ordem_crescente_e_separadas_por_v_rgula">Insira as alternativas corretas em ordem crescente e separadas por quebra de linha.</string>
    <string name="criar_prova">Criar Prova</string>
    <string name="a_turma">"A turma "</string>
    <string name="est_sendo_criada_por_favor_insira_cada_aluno_em_uma_linha_diferente">" está sendo criada. Por favor, insira cada aluno em uma linha diferente."</string>
    <string name="_00_alunos">00 Alunos</string>
    <string name="insira_novas_turmas">Insira novas turmas</string>
    <string name="n_o_h_turmas">Não há Turmas</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="logo">Logo</string>
    <string name="cadastrar_com_google">Cadastrar com Google</string>
    <string name="provas">Provas</string>
    <string name="logo_do_google">Logo do Google</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="n_o_tem_conta_clique_aqui_para_se_cadastrar">Não tem conta? Clique aqui para se cadastrar.</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="arroba">arroba</string>
    <string name="identifica_o_da_prova">Identificação da Prova</string>
    <string name="turmas">Turmas</string>
    <string name="escanear_prova">Escanear Prova</string>
    <string name="sobre">Sobre</string>
    <string name="nomes">Nomes</string>
    <string name="seu_nome">Seu nome</string>
    <string name="quest_es_com_mais_de_uma_alternativa_marcada_ser_o_anulada">Não marque mais de uma alternativa e uma questão.</string>
    <string name="verifique_os_campos">Verifique os campos</string>
    <string name="ler_prova">Ler Prova</string>
</resources>