<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Cadastro">

    <EditText
        android:id="@+id/emailCadastro"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:ems="12"
        android:hint="@string/e_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468" />

    <EditText
        android:hint="@string/senha"
        android:id="@+id/senhaCadastro"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:ems="12"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/emailCadastro"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailCadastro"
        app:layout_constraintTop_toBottomOf="@+id/emailCadastro"
        app:layout_constraintVertical_bias="0.073"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/senhaCadastro"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/senhaCadastro"
        app:layout_constraintTop_toBottomOf="@+id/senhaCadastro"
        app:layout_constraintVertical_bias="0.151" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="120sp"
        android:layout_height="120sp"
        app:layout_constraintBottom_toTopOf="@+id/emailCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/arroba"
        android:contentDescription="@string/arroba" />
</androidx.constraintlayout.widget.ConstraintLayout>