<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activitys.CriarProva">

    <EditText
        android:id="@+id/txtQntDeQuestao"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:autofillHints=""
        android:ems="8"
        android:hint="@string/quantidade_de_quest_es"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.032" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/vazio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056"
        app:srcCompat="@drawable/prova" />

    <EditText
        android:id="@+id/txtQntDeAlternativas"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:autofillHints=""
        android:ems="8"
        android:hint="@string/quantidade_de_alternativas"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtQntDeQuestao"
        app:layout_constraintTop_toBottomOf="@+id/txtQntDeQuestao"
        app:layout_constraintVertical_bias="0.022" />

    <MultiAutoCompleteTextView
        android:id="@+id/txtQuestoesCorretas"
        android:layout_width="wrap_content"
        android:layout_height="170sp"
        android:layout_marginTop="28dp"
        android:ems="12"
        android:gravity="start|top"
        android:hint="@string/insira_as_alternativas_corretas_em_ordem_crescente_e_separadas_por_v_rgula"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/identificacaoCriarProva"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/nomeDaTurma"
        app:layout_constraintTop_toBottomOf="@+id/nomeDaTurma"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/botaoCriarProva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criar_prova"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtQuestoesCorretas"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtQuestoesCorretas"
        app:layout_constraintTop_toBottomOf="@+id/txtQuestoesCorretas"
        app:layout_constraintVertical_bias="0.222" />

    <EditText
        android:id="@+id/identificacaoCriarProva"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginTop="20dp"
        android:ems="12"
        android:hint="@string/identifica_o_da_prova"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/seuNome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/seuNome"
        app:layout_constraintTop_toBottomOf="@+id/seuNome"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/seuNome"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:ems="12"
        android:hint="@string/seu_nome"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtQntDeAlternativas"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtQntDeAlternativas"
        app:layout_constraintTop_toBottomOf="@+id/txtQntDeAlternativas"
        app:layout_constraintVertical_bias="0.028" />

    <ImageView
        android:id="@+id/addAlternativas"
        android:layout_width="45sp"
        android:layout_height="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtQntDeAlternativas"
        app:layout_constraintEnd_toEndOf="@+id/seuNome"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtQntDeAlternativas"
        app:layout_constraintTop_toTopOf="@+id/txtQntDeAlternativas"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/add"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/addQuestoes"
        android:layout_width="45sp"
        android:layout_height="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtQntDeQuestao"
        app:layout_constraintEnd_toEndOf="@+id/addAlternativas"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtQntDeQuestao"
        app:layout_constraintTop_toTopOf="@+id/txtQntDeQuestao"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/add"
        android:importantForAccessibility="no" />

    <Spinner
        android:id="@+id/nomeDaTurma"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/identificacaoCriarProva"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/identificacaoCriarProva"
        app:layout_constraintTop_toBottomOf="@+id/identificacaoCriarProva"
        app:layout_constraintVertical_bias="0.043" />


</androidx.constraintlayout.widget.ConstraintLayout>