<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activitys.MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_marginEnd="8sp"
                android:backgroundTint="@color/purple_500"
                app:cardCornerRadius="25sp">

                <ImageView
                    android:id="@+id/turmaMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:contentDescription="@string/vazio"
                    android:padding="30sp"

                    app:srcCompat="@drawable/turma" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40sp"
                    android:text="@string/turmas"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="8sp"
                android:backgroundTint="@color/purple_500"

                app:cardCornerRadius="25sp">

                <ImageView
                    android:id="@+id/criarPessoasETurmasMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:contentDescription="@string/vazio"
                    android:padding="30sp"
                    app:srcCompat="@drawable/add" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40sp"
                    android:text="@string/criar_turma"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="191dp">

            <androidx.cardview.widget.CardView
                android:layout_marginTop="8sp"
                android:layout_marginEnd="8sp"
                android:layout_marginBottom="8sp"
                android:backgroundTint="@color/purple_500"

                app:cardCornerRadius="25sp">

                <ImageView
                    android:id="@+id/criarProvaMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:contentDescription="@string/vazio"
                    android:padding="30sp"
                    app:srcCompat="@drawable/prova" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40sp"
                    android:text="@string/criar_prova"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="8sp"
                android:layout_marginTop="8sp"
                android:backgroundTint="@color/purple_500"

                app:cardCornerRadius="25sp">

                <ImageView
                    android:id="@+id/escanearMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:contentDescription="@string/vazio"
                    android:padding="30sp"
                    app:srcCompat="@drawable/cam" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40sp"
                    android:text="@string/escanear_prova"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </androidx.cardview.widget.CardView>
        </TableRow>

        <androidx.cardview.widget.CardView
            android:layout_marginStart="8sp"
            android:layout_marginTop="8sp"
            android:backgroundTint="@color/purple_500"
            app:cardCornerRadius="25sp">

            <ImageView
                android:id="@+id/sobreMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/vazio"
                android:padding="30sp"
                app:srcCompat="@drawable/about"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40sp"
                android:text="@string/sobre"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </androidx.cardview.widget.CardView>

    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="FULL_BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>